--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@nuxt/icon": "^1.10.3",
     "@nuxt/image": "^1.8.1",
     "@nuxtjs/supabase": "^1.4.5",
+    "@vueuse/nuxt": "^12.3.0",
     "axios": "^1.7.9",
     "nuxt": "^3.15.0",
     "sass": "^1.83.0",
