--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@nuxtjs/supabase": "^1.4.5",
     "@vueuse/nuxt": "^12.3.0",
     "axios": "^1.7.9",
+    "dotenv": "^16.4.7",
     "nuxt": "^3.15.0",
     "sass": "^1.83.0",
     "vue": "latest",
