--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 SUPABASE_URL="https://example.supabase.co"
 SUPABASE_KEY="<your_key>"
 
-SPOONACULAR_API_KEY="<yout_key>"
+SPOONACULAR_API_KEY="<your_key>"
