--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@nuxt/icon": "^1.10.3",
     "@nuxt/image": "^1.8.1",
     "@nuxtjs/supabase": "^1.4.5",
+    "@pinia/nuxt": "^0.9.0",
     "@vueuse/nuxt": "^12.3.0",
     "axios": "^1.7.9",
     "dotenv": "^16.4.7",
     "nuxt": "^3.15.0",
+    "pinia": "^2.3.0",
     "sass": "^1.83.0",
     "vue": "latest",
     "vue-router": "latest"
