--- a/package.json
+++ b/package.json
@@ -12,11 +12,20 @@
   "dependencies": {
     "@nuxt/icon": "^1.10.3",
     "@nuxt/image": "^1.8.1",
-    "@nuxtjs/supabase": "^1.4.5",
     "axios": "^1.7.9",
+    "dotenv": "^16.4.7",
     "nuxt": "^3.15.0",
     "sass": "^1.83.0",
     "vue": "latest",
     "vue-router": "latest"
+  },
+  "devDependencies": {
+    "@nuxt/test-utils": "^3.15.1",
+    "@nuxtjs/supabase": "^1.4.5",
+    "@vue/test-utils": "^2.4.6",
+    "happy-dom": "^15.11.7",
+    "jsdom": "^25.0.1",
+    "playwright-core": "^1.49.1",
+    "vitest": "^2.1.8"
   }
 }
