--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@nuxt/icon": "^1.10.3",
     "@nuxt/image": "^1.8.1",
+    "@pinia/nuxt": "^0.9.0",
+    "@vueuse/nuxt": "^12.3.0",
     "axios": "^1.7.9",
     "dotenv": "^16.4.7",
     "nuxt": "^3.15.0",
