--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "start": "node .output/server/index.mjs"
   },
   "dependencies": {
+    "@nuxt/fonts": "^0.10.3",
     "@nuxt/icon": "^1.10.3",
     "@nuxt/image": "^1.8.1",
     "@pinia/nuxt": "^0.9.0",
